# controllers/userController.js
@@ -10,28 +10,18 @@ const express = require('express');
 const { ObjectId } = require('mongodb'); // Import ObjectId to handle MongoDB ObjectIds
 const database = require("../database/users"); // Import the database connection
 
-/**
- * Get a single user by ID.
- * 
- * @param {Object} req - Express request object
- * @param {Object} res - Express response object
- */
-const getSingle = async (req, res) => {
-    try {
-        const user_id = new ObjectId(req.params.id); // Get the user ID from the request parameters
-        const result = await database.getDatabase().db().collection('users').find({ _id: user_id }); // Query the database
-        result.toArray().then((users) => {
-            res.setHeader('Content-Type', "application/json");
-            res.status(200).json(users[0]); // Send the first user found
-        }).catch((err) => {
-            console.log("Error with retrieving user: ", err);
-            res.status(500).send("Internal Server Error");
-        });
-    } catch (error) {
-        console.log("Error: ", error);
-        res.status(500).send("Internal Server Error");
-    }
-};
+//using mongoose
+// const database = require('../models')
+// const User = database.users;
+
+
+
+
+
+
+
+//WEEK 1 getting all , individual , post, put, delete using the mongodb connection to the database.
+
 
 /**
  * Get all users.
@@ -55,6 +45,32 @@ const getAll = async (req, res) => {
     }
 };
 
+
+/**
+ * Get a single user by ID.
+ * 
+ * @param {Object} req - Express request object
+ * @param {Object} res - Express response object
+ */
+const getSingle = async (req, res) => {
+    try {
+        const user_id = new ObjectId(req.params.id); // Get the user ID from the request parameters
+        const result = await database.getDatabase().db().collection('users').find({ _id: user_id }); // Query the database
+        result.toArray().then((users) => {
+            res.setHeader('Content-Type', "application/json");
+            res.status(200).json(users[0]); // Send the first user found
+        }).catch((err) => {
+            console.log("Error with retrieving user: ", err);
+            res.status(500).send("Internal Server Error");
+        });
+    } catch (error) {
+        console.log("Error: ", error);
+        res.status(500).send("Internal Server Error");
+    }
+};
+
+
+
 /**
  * Create a new user.
  * 
@@ -63,15 +79,16 @@ const getAll = async (req, res) => {
  */
 const createUser = async (req, res) => {
     try {
-        const { firstName, lastName, email, favoriteColor, birthday } = req.body; // Destructure the user data from the request body
-        await database.getDatabase().db().collection('users').insertOne(req.body)
-            .then((result) => {
-                res.setHeader('Content-Type', "application/json");
-                res.status(201).send(result); // Send the result of the insertion
-            }).catch((err) => {
-                console.log("Error with creating user: ", err);
-                res.status(500).send("Internal Server Error");
-            });
+        const user = { 
+            firstName: req.body.firstName, 
+            lastName: req.body.lastName, 
+            email: req.body.email, 
+            favoriteColor: req.body.favoriteColor, 
+            birthday: req.body.birthday 
+        }  // Destructure the user data from the request body
+        const result = await database.getDatabase().db().collection('users').insertOne(user)
+        res.setHeader('Content-Type', "application/json");
+        res.status(201).json(result); // Send the result of the insertion
     } catch (error) {
         console.log("Error: ", error);
         res.status(500).send("Internal Server Error");
@@ -87,14 +104,21 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
     try {
         const userId = new ObjectId(req.params.id); // Get the user ID from the request parameters
-        await database.getDatabase().db().collection('users').updateOne({ _id: userId }, { $set: req.body })
-            .then((result) => {
-                res.setHeader('Content-Type', "application/json");
-                res.status(200).send(result); // Send the result of the update
-            }).catch((err) => {
-                console.log("Error with updating user: ", err);
-                res.status(500).send("Internal Server Error");
-            });
+        const user = {
+            firstName: req.body.firstName, 
+            lastName: req.body.lastName, 
+            email: req.body.email, 
+            favoriteColor: req.body.favoriteColor, 
+            birthday: req.body.birthday 
+        };
+        const result = await database.getDatabase().db().collection('users').updateOne({ _id: userId }, { $set: user })
+        .then((result) => {
+            res.setHeader('Content-Type', "application/json");
+            res.status(200).send(result); // Send the result of the update
+        }).catch((err) => {
+            console.log("Error with updating user: ", err);
+            res.status(500).send("Internal Server Error");
+        });
     } catch (error) {
         console.log("Error: ", error);
         res.status(500).send("Internal Server Error");
@@ -110,19 +134,50 @@ const updateUser = async (req, res) => {
 const deleteUser = async (req, res) => {
     try {
         const userId = new ObjectId(req.params.id); // Get the user ID from the request parameters
-        await database.getDatabase().db().collection('users').deleteOne({ _id: userId })
-            .then((result) => {
-                res.setHeader('Content-Type', "application/json");
-                res.status(200).send(result); // Send the result of the deletion
-            }).catch((err) => {
-                console.log("Error with deleting user: ", err);
-                res.status(500).send("Internal Server Error");
-            });
+        const result = await database.getDatabase().db().collection('users').deleteOne({ _id: userId })
+        if (result.deletedCount === 0) {
+            // No user was deleted
+            res.status(404).json({ message: "User not found" });
+        } else {
+            // User was successfully deleted
+            res.setHeader('Content-Type', "application/json");
+            res.status(200).json(result); // Send the result of the deletion
+        }
     } catch (error) {
         console.log("Error: ", error);
         res.status(500).send("Internal Server Error");
     }
 };
+
+
+
+// //WEEK 2 use the mongoose to connect to the database
+// exports.getAll = (req, res) => {
+//     User.find().then((users) => {
+//         res.setHeader('Content-Type', "application/json");
+//         res.status(200).json(users); // Send all users found
+//     }).catch((err) => {
+//         console.log("Error with retrieving users: ", err);
+//         res.status(500).send("Internal Server Error");
+//     });
+// };
+
+// exports.getSingle = async (req, res) => {
+// try {
+//     const user_id = new ObjectId(req.params.id); // Get the user ID from the request parameters
+//     const result = await database.getDatabase().db().collection('users').find({ _id: user_id }); // Query the database
+//     result.toArray().then((users) => {
+//         res.setHeader('Content-Type', "application/json");
+//         res.status(200).json(users[0]); // Send the first user found
+//     }).catch((err) => {
+//         console.log("Error with retrieving user: ", err);
+//         res.status(500).send("Internal Server Error");
+//     });
+// } catch (error) {
+//     console.log("Error: ", error);
+//     res.status(500).send("Internal Server Error");
+// }
+// };
 
 // Export the route handlers to be used in other parts of the application
 module.exports = {
@@ -132,3 +187,7 @@ module.exports = {
     updateUser,
     deleteUser
 };
+
+
+
+
